src/frontend/compilers/file_parser.cpp
#include "frontend/compilers/file_parser.h"

#include <cmath>
#include <cstring>
#include <filesystem>
#include "common/util.h"
#include "common/logger.h"

using pass = file_parser;

pass::file_parser(compiler& p, nnmodule& mod) : comp{p}, mod{mod}, tt{mod.tt} {
    using namespace grammar;
    
    constexpr std::array<grammar::symbol, 16> pre {{
        SPREAD, INCREMENT, DECREMENT, SUB, LENGTH, NOT, LNOT, AT, POINTER, WEAK_PTR,
        OBRACK, ADD, KW_TYPEOF, KW_SIZEOF, KW_CONST, KW_VOLAT
    }};
    
    constexpr std::array<grammar::symbol, 2> post {{
        INCREMENT, DECREMENT
    }};
    
    constexpr std::array<grammar::symbol, 27> infix {{
        KW_AS, MUL, DIV, IDIV, MODULO, ADD, SUB, CONCAT, 
        SHL, SHR, RTL, RTR, BITSET, BITCLEAR, BITTOGGLE, BITCHECK,
        AND, OR, XOR, LT, LE, GT, GE, EQUALS, NEQUALS, LAND, LOR
    }};
    
//     constexpr std::array<grammar::symbol, 3> post_circumfix {{
//         OPAREN, OBRACK, OSELECT
//     }};
    
    for (auto e : pre) {
        pre_ops.insert(e);
    }
    
    for (auto e : post) {
        post_ops.insert(e);
    }
    
    for (auto e : infix) {
        infix_ops.insert(e);
    }
    
}

bool pass::read() {
    mod.ts.read();
    
    if (mod.ts.head->tt == token_type::ERROR) {
        mod.errors.push_back({make_error_ast(mod.ts.head), mod.ts.head->content});
        return false;
    } else {
        return true;
    }
}

bool pass::pass() {    
    n = mod.ts.head;
    clear();
    c = n;
    next();
    
    mod.root = program_unit();
    return !mod.errors.size();
}

token* pass::next() {
    return next(grammar::SPECIAL_INVALID);
}

token* pass::next(grammar::symbol expected) {
    using grammar::string_to_symbol;
    
    token* buff = c;
    c = peek(expected);
    return buff;
}

token* pass::peek(grammar::symbol expected) {
    using grammar::string_to_symbol;
    
    auto& syms = string_to_symbol;
        
    while (n) {
        token* buff = n;
        n = n->next;
        
        switch (buff->tt) {
            case token_type::NUMBER: [[fallthrough]];
            case token_type::INTEGER: [[fallthrough]];
            case token_type::FLOATING: [[fallthrough]];
            case token_type::CHARACTER: [[fallthrough]];
            case token_type::STRING: [[fallthrough]];
            case token_type::COMPILER: {
                
                clear();
                return buff;
            }
            case token_type::END_OF_FILE: {
                n = buff; // Go back
                return buff;
            }
            case token_type::IDENTIFIER: [[fallthrough]];
            case token_type::KEYWORD: {
                if (auto it = string_to_symbol.find(buff->content); it != string_to_symbol.end()) {
                    buff->tt = token_type::KEYWORD;
                    buff->value = it->second;
                }
                
                clear();
                return buff;
            }
            case token_type::SYMBOL: {
                char sym[4] {'\0', '\0', '\0', '\0'};
                u8 i = 0;
                grammar::symbol found{grammar::SPECIAL_INVALID};
                for (; i < std::min(4ul, buff->content.size()); ++i) {
                    sym[i] = buff->content[i];
                    if (auto it = syms.find(sym); it != syms.end()) { // We found a symbol
                        found = (grammar::symbol) it->second;
                        if (found == expected) { // It's the one we expected
                            ++i;
                            goto got_it;
                        }
                    } else if (found != grammar::SPECIAL_INVALID) { // We found no symbol, and we already have one
                        sym[i] = '\0';
                        goto got_it;
                    }
                }
                
                if (found != grammar::SPECIAL_INVALID) {
                    goto got_it;
                }
                
                // Nothing was found, split and error
                if (buff->content.size() > i) {
                    mod.ts.split(buff, i);
                    n = buff->next;
                }
                buff->tt = token_type::ERROR;
                
                clear();
                return buff;
                
                got_it: // We found our symbol, split and return
                u8 len = i;
                if (len < buff->content.length()) {
                    mod.ts.split(buff, len);
                }
                n = buff->next;
                buff->value = found;
                
                clear();
                return buff;
            }
            case token_type::WHITESPACE: [[fallthrough]];
            case token_type::NEWLINE: [[fallthrough]];
            case token_type::COMMENT: 
                break;
            case token_type::ERROR: {
                mod.errors.push_back({make_error_ast(buff), buff->content});
                break;
            }
        }
    }
    
    return n;
}

void pass::clear() {
    while (n) {        
        switch (n->tt) {
            case token_type::NUMBER: [[fallthrough]];
            case token_type::INTEGER: [[fallthrough]];
            case token_type::FLOATING: [[fallthrough]];
            case token_type::CHARACTER: [[fallthrough]];
            case token_type::STRING: [[fallthrough]];
            case token_type::COMPILER: [[fallthrough]];
            case token_type::IDENTIFIER: [[fallthrough]];
            case token_type::KEYWORD: [[fallthrough]];
            case token_type::END_OF_FILE: [[fallthrough]];
            case token_type::SYMBOL:
                return;
            case token_type::WHITESPACE: [[fallthrough]];
            case token_type::NEWLINE: [[fallthrough]];
            case token_type::COMMENT: 
                break;
            case token_type::ERROR: {
                mod.errors.push_back({make_error_ast(n), n->content});
                break;
            }
        }
        n = n->next;
    }
}

bool pass::is(token_type tt) {
    return c->tt == tt;
}

bool pass::is_keyword(grammar::symbol kw) {
    return c->tt == token_type::KEYWORD && c->value == kw;
}

bool pass::is_symbol(grammar::symbol sym) {
    return c->tt == token_type::SYMBOL && c->value == sym;
}

bool pass::require(token_type tt) {
    if (c->tt == tt) {
        return true;
    } else {
        mod.errors.push_back({make_error_ast(c), ss::get() << "Expecting " << tt << ss::end()});
        return false;
    }
}

bool pass::require_keyword(grammar::symbol sym) {
    if (c->tt == token_type::KEYWORD && c->value == sym) {
        return true;
    } else {
        mod.errors.push_back({make_error_ast(c), ss::get() << "Expecting " << sym << ss::end()});
        return false;
    }
}

bool pass::require_symbol(grammar::symbol sym) {
    if (c->tt == token_type::SYMBOL && c->value == sym) {
        return true;
    } else {
        mod.errors.push_back({make_error_ast(c), ss::get() << "Expecting " << sym << ss::end()});
        return false;
    }
}

bool pass::is_assign() {
    return c->tt == token_type::SYMBOL && (c->value >= grammar::ASSIGN && c->value <= grammar::MODULO_ASSIGN);
}

bool pass::require_assign() {
    if (is_assign()) {
        return true;
    } else {
        mod.errors.push_back({make_error_ast(c), "Expecting assignment"});
        return false;
    }
}

ast* pass::number() {
    token* tok = next(); // Number
    ASSERT(tok->tt == token_type::NUMBER, "Not a number");
    
    const std::string& s = tok->content;
    
    if (s.length() > 1) {
        switch(s[1]) {
            case 'b': [[fallthrough]];
            case 'B': {
                u64 value{0};
                u8 charcount{0};
                
                for (u64 i = 2; i < s.length(); ++i) {
                    switch (s[i]) {
                        case '\'': [[fallthrough]];
                        case '_': continue;
                        case '0': [[fallthrough]];
                        case '1': 
                            ++charcount;
                            value = (value << 1) | ((s[i] - '0') & 1);
                            break;
                    }
                }
                
                // TODO Type choosing
                // TODO Check charcount
                
                return ast::make_value({value}, tok, tt.U64);
            }
            case 'o': [[fallthrough]];
            case 'O': {
                u64 value{0};
                u8 charcount{0};
                
                for (u64 i = 2; i < s.length(); ++i) {
                    switch (s[i]) {
                        case '\'': [[fallthrough]];
                        case '_': continue;
                        case '0': [[fallthrough]];
                        case '1': [[fallthrough]];
                        case '2': [[fallthrough]];
                        case '3': [[fallthrough]];
                        case '4': [[fallthrough]];
                        case '5': [[fallthrough]];
                        case '6': [[fallthrough]];
                        case '7':
                            ++charcount;
                            value = (value << 3) | ((s[i] - '0') & 7);
                            break;
                    }
                }
                
                // TODO Type choosing
                // TODO Check charcount
                
                return ast::make_value({value}, tok, tt.U64);
            }
            case 'x': [[fallthrough]];
            case 'X': {
                u64 value{0};
                u8 charcount{0};
                
                for (u64 i = 2; i < s.length(); ++i) {
                    switch (s[i]) {
                        case '\'': [[fallthrough]];
                        case '_': continue;
                        case '0': [[fallthrough]];
                        case '1': [[fallthrough]];
                        case '2': [[fallthrough]];
                        case '3': [[fallthrough]];
                        case '4': [[fallthrough]];
                        case '5': [[fallthrough]];
                        case '6': [[fallthrough]];
                        case '7': [[fallthrough]];
                        case '8': [[fallthrough]];
                        case '9':
                            ++charcount;
                            value = (value << 4) | ((s[i] - '0') & 0xF);
                            break;
                        case 'a': [[fallthrough]];
                        case 'b': [[fallthrough]];
                        case 'c': [[fallthrough]];
                        case 'd': [[fallthrough]];
                        case 'e': [[fallthrough]];
                        case 'f':
                            ++charcount;
                            value = (value << 4) | (((s[i] - 'a') + 10) & 0xF);
                            break;
                        case 'A': [[fallthrough]];
                        case 'B': [[fallthrough]];
                        case 'C': [[fallthrough]];
                        case 'D': [[fallthrough]];
                        case 'E': [[fallthrough]];
                        case 'F':
                            ++charcount;
                            value = (value << 4) | (((s[i] - 'A') + 10) & 0xF);
                            break;
                    }
                }
                
                // TODO Type choosing
                // TODO Check charcount
                
                return ast::make_value({value}, tok, tt.U64);
            }
            default:
                break;
        }
    }
    
    // Base 10
    __uint128_t integer{0};
    __uint128_t frac{0};
    u8 frac_digits{0};
    s16 exp{0};
    bool has_exp{false};
    s8 exp_mul{0};
    bool is_double{false};
    bool is_float{false};
    
    for (const char& c : s) {
        
        switch(c) {
            case '\'': [[fallthrough]];
            case '_': continue;
            case 'E': [[fallthrough]];
            case 'e':
                if (has_exp) {
                    // error
                } else {
                    has_exp = true;
                }
                break;
            case '+':
                if (!has_exp || exp_mul || exp) {
                    // error
                } else {
                    exp_mul = 1;
                }
                break;
            case '-': 
                if (!has_exp || exp_mul || exp) {
                    // error
                } else {
                    exp_mul = -1;
                }
                break;
            case '.': 
                if (is_double) {
                    // error
                } else {
                    is_double = true;
                }
                break;
            case 'F': [[fallthrough]];
            case 'f': 
                is_float = true;
                if (&c != &s[s.length() - 1]) {
                    // error;
                }
                break;
            case '0': [[fallthrough]];
            case '1': [[fallthrough]];
            case '2': [[fallthrough]];
            case '3': [[fallthrough]];
            case '4': [[fallthrough]];
            case '5': [[fallthrough]];
            case '6': [[fallthrough]];
            case '7': [[fallthrough]];
            case '8': [[fallthrough]];
            case '9': {
                if (has_exp) {
                    exp *= 10;
                    exp += c - '0';
                } else if (is_double) {
                    frac *= 10;
                    frac += c - '0';
                    frac_digits++;
                } else {
                    integer *= 10;
                    integer += c - '0';
                }
            }
            default:
                // error
                continue;
        }
    }
    
    union {
        u64 value;
        double d;
        float f;
    } punner;
    type* t{nullptr};
    
    // NOTE: Very, veeeery naive implementation. I'll get back to this
    
    if (is_double) {
        double d{0};
        d += (double) integer;
        d += ((double) frac / (double) frac_digits);
        d *= std::pow(10, exp * (exp_mul ? exp_mul : 1));
        punner.d = d;
        t = tt.F64;
    } else if (is_float) {
        float f{0};
        f += (float) integer;
        f += ((float) frac / (float) frac_digits);
        f *= std::pow(10, exp * (exp_mul ? exp_mul : 1));
        punner.f = f;
        t = tt.F32;
    } else {
        integer *= std::pow(10, exp * (exp_mul ? exp_mul : 1));
        // TODO Check that integer and frac are not too large
        u64 value{(u64) integer};
        punner.value = value;
        // TODO Check type for numbers
        t = tt.U64;
    }
    
    return ast::make_value({punner.value}, tok, t);
}

ast* pass::identifier() {
    token* tok = next(); // Identifier
    ASSERT(tok->tt == token_type::IDENTIFIER, "Not an identifier");
    
    return ast::make_iden({nullptr}, tok, tt.NONE);
}

ast* pass::char_lit() {
    token* tok = next(); // Character literal
    ASSERT(tok->tt == token_type::CHARACTER, "Not a character");
    const std::string& s = tok->content;
    
    if (s.length() < 4 || s[1] != '\'' || s[s.length() - 1] != '\'') {
        // error
        ast* ret = ast::make_value({0}, tok, tt.C32);
        mod.errors.push_back({ret, "Invalid char literal"});
        return ret;
    }
    
    u8 plen{0};
    u64 res = utf8_to_utf32(s.c_str() + 2, &plen);
    if (res > 0x10FFF || plen != s.length() - 3) {
        ast* ret = ast::make_value({0}, tok, tt.C32);
        mod.errors.push_back({ret, "Invalid char literal"});
        return ret;
    }
    u32 value{(u32) res};
    
    return ast::make_value({value}, tok, tt.C32);
}

ast* pass::string_lit() {
    // TODO Interning!
    
    token* tok = next(); // String literal
    ASSERT(tok->tt == token_type::STRING, "Not a string");
    const std::string& s = tok->content;
    
    u64 start = 0, end = s.length() - 1;
    
    if (s[end] != '"') {
        ast* ret = ast::make_string(ast_string{""}, tok, tt.sized_array_of(tt.C8, 0, true));
        mod.errors.push_back({ret, "Invalid string literal"});
        return ret;
    } else if (s[start] == '\'') {
        for (u64 i = start; i < end; ++i) {
            if (s[i] == '"') {
                start = i;
                break;
            }
        }
    } else if (s[start] != '"') {
        ast* ret = ast::make_string(ast_string{""}, tok, tt.sized_array_of(tt.C8, 0, true));
        mod.errors.push_back({ret, "Invalid string literal"});
        return ret;
    }
    
    
    enum class string_flags {
        utf8, utf16, utf32, c_str
    } sflags{string_flags::utf8};
    [[maybe_unused]]
    bool warn{false};
    
    if (start != 0) {
        using namespace std::string_literals;
        std::string flags = s.substr(1, start);
        if (flags == "c"s) {
            sflags = string_flags::c_str;
        } else if (flags == "u8"s) {
            sflags = string_flags::utf8;
        } else if (flags == "u16"s) {
            sflags = string_flags::utf16;
        } else if (flags == "u32"s) {
            sflags = string_flags::utf32;
        } else {
            sflags = string_flags::utf32;
            warn = true;
        }
    }
    
    // Please... my buffer overflows... they are very sick...
    u8* buff = new u8[32];
    u8 buff_size = 32;
    u8 rlen{0};
    u64 i = start + 1;
    const char* c = s.c_str();
    while (i < end && c[i]) {
        u8 len{0};
        u8 plen{0};
        u64 res = read_utf8(c + i, len, &plen);
        if (res > 0xFFFFFFFF) {
            delete [] buff;
            ast* ret = ast::make_string(ast_string{""}, tok, tt.sized_array_of(tt.C8, 0, true));
            mod.errors.push_back({ret, "Invalid string literal"});
            return ret;
        }
        if (rlen + plen > buff_size) {
            u8* buffbuff = new u8[buff_size * 2];
            std::memcpy(buffbuff, buff, rlen);
            delete [] buff;
            buff = buffbuff;
            buff_size *= 2;
        }
        std::memcpy(buff + rlen, &res, len);
        rlen += len;
        i += plen;
    }
    
    if (i != end || c[i] != '"') {
        delete [] buff;
        ast* ret = ast::make_string(ast_string{""}, tok, tt.sized_array_of(tt.C8, 0, true));
        mod.errors.push_back({ret, "Invalid string literal"});
        return ret;
    }
    
    if (sflags == string_flags::utf8) {
        return ast::make_string(ast_string{buff, rlen}, tok, tt.sized_array_of(tt.C8, rlen, true));
    } else {
        // TODO
        ASSERT(false, "Murder this");
        return nullptr;
    }
        
}

ast* pass::note() {
    token* tok = next(); // Note
    ASSERT(tok->tt == token_type::COMPILER, "Not a compiler note");
    
    // TODO Actually use notes we need
    if (is_symbol(grammar::OPAREN)) {
        while (is_symbol(grammar::COMMA) || is_symbol(grammar::OPAREN)) {
            next(); // ( or ,
            expression(); // TODO Stop bleeding memory holy fuck
        }
        // TODO err
        if (require_symbol(grammar::CPAREN)) next(); // )
    }
    
    
    return ast::make_iden({nullptr}, tok, tt.NONE);
}

ast* pass::array_lit() {
    ASSERT(is_symbol(grammar::LITERAL_ARRAY), "Invalid start to array literal");
    
    ast* ret = ast::make_compound({}, c, tt.NONE_ARRAY);
    next(); // '[
    
    if (!is_symbol(grammar::CBRACK)) {
        do {
            ast* e = expression();
            ret->compound.elems.push_back(e);
        } while (is_symbol(grammar::COMMA) && next());
    }
    
    // TODO err
    if (require_symbol(grammar::CBRACK)) next(); // ]
    
    return ret;
}

ast* pass::struct_lit() {
    ASSERT(is_symbol(grammar::LITERAL_STRUCT), "Invalid start to struct literal");
    
    ast* ret = ast::make_compound({}, c, tt.NONE_STRUCT);
    next(); // '{
    
    if (!is_symbol(grammar::CBRACE)) {
        do {
            ast* e = expression();
            ret->compound.elems.push_back(ast::make_binary({grammar::SP_NAMED, ast::make_none({}, e->tok, tt.TYPELESS), e}, e->tok, e->t));
        } while (is_symbol(grammar::COMMA) && next());
    
        if (is_symbol(grammar::ASSIGN)) {
            ast* iden = ret->compound.elems.tail;
            ASSERT(iden && iden->tt == ast_type::BINARY && iden->binary.sym == grammar::SP_NAMED, "Invalid struct element");
            next(); // =
            iden->binary.left = expression();
            while (is_symbol(grammar::COMMA)) {
                next(); // ,
                ast* n = expression(); // iden?
                if (require_symbol(grammar::ASSIGN)) next(); // =
                ast* e = expression();
                ret->compound.elems.push_back(ast::make_binary({grammar::SP_NAMED, n, e}, e->tok, e->t));
            }
        }
    }
    
    // TODO err
    if (require_symbol(grammar::CBRACE)) next(); // }
    
    return ret;
}

ast* pass::tuple_lit() {
    ASSERT(is_symbol(grammar::LITERAL_TUPLE), "Invalid start to tuple literal");
    
    ast* ret = ast::make_compound({}, c, tt.NONE_TUPLE);
    next(); // '(
        
    if (!is_symbol(grammar::CPAREN)) {
        do {
            ast* e = expression();
            ret->compound.elems.push_back(e);
        } while (is_symbol(grammar::COMMA) && next());
    }
    
    // TODO err
    if (require_symbol(grammar::CPAREN)) next(); // )
    
    return ret;
}


ast* pass::program_unit() {
    ast* ret = ast::make_block({}, c, tt.TYPELESS);
    
    while (!is(token_type::END_OF_FILE)) {
        ret->block.elems.push_back(freestmt());
    }
    
    return ret;
}

ast* pass::freestmt() {
    while (is(token_type::COMPILER)) {
        note(); // Ignore for now
    }
    
    require(token_type::KEYWORD); // ???
    
    switch (c->value) {
        case grammar::KW_USING:
            return usingstmt();
        case grammar::KW_IMPORT:
            return importstmt();
        case grammar::KW_NAMESPACE:
            return namespacestmt();
        case grammar::KW_DEF: [[fallthrough]];
        case grammar::KW_VAR: [[fallthrough]];
        case grammar::KW_LET: [[fallthrough]];
        case grammar::KW_REF:
            return declstmt();
        default:
            // TODO err
            ast* ret = make_error_ast(c);
            next(); // ???
            return ret;
    }
}
